--- a/Poster-Interactivo/style.css
+++ b/Poster-Interactivo/style.css
@@ -5,6 +5,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
+
 .escenario img{
     width:750px;
     height:500px;
@@ -186,7 +187,7 @@ top:-1110px;
 }
 
 .activa{
-    display: block;
+    display: block!important;
 }
 .escena{
     display: none;
@@ -394,8 +395,8 @@ top:-1110px;
     0% {left:40%;}
     100% {left:48%;}
 }
-/*Animacion Manzanas*/
 
+/*Animacion Manzanas*/
 .saltarM{
     animation: salto 1s ease forwards
 }
