--- a/Poster-Interactivo/style.css
+++ b/Poster-Interactivo/style.css
@@ -142,10 +142,7 @@
     left:999px;
 }
 
-.minis{
-    position: absolute;
-   top: px;
-}
+
 .anterior{
     
     left:135px;
@@ -153,11 +150,11 @@
     width:30px;
     height:30px;
     border-radius:50px;
-    background-color: #000000;
+    background-color: #fcff68;
     border:none;
     cursor: pointer;
     margin:5px;
-    color: #ce0cff;
+    color: #3e8df3;
     
 }
 .siguiente{
@@ -167,11 +164,19 @@
     width:30px;
     height:30px;
     border-radius:50px;
-    background-color: #000000;
+    background-color: #fcff68;
     border:none;
     cursor: pointer;
     margin:5px;
-    color: #0dffdf;
+    color: #3e8df3;
+}
+
+.minis{
+    position: absolute;
+    top:520px;
+    left:335px;
+    display: flex;
+    gap:20px;
 }
 
 .miniatura img{
@@ -179,9 +184,7 @@ width:150px;
 height:80px;
 background-color: #0af5f5;
 border-radius:5px;
-position: absolute;
-left:299px;
-top:-725px;
+
 }
 
 .miniatura1 img{
@@ -189,19 +192,13 @@ width:150px;
 height:80px;
 background-color: #ab0af5;
 border-radius:5px;
-position: absolute;
-left:510px;
-top:-810px;
 }
-
 .miniatura2 img{
 width:150px;
 height:80px;
 background-color: #0af5f5;
 border-radius:5px;
-position: absolute;
-left:720px;
-top:-895px;
+
 }
 
 .activa{
