--- a/2-base-datos-comic/style.css
+++ b/2-base-datos-comic/style.css
@@ -1,22 +1,57 @@
 *{
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;}
+body{
+    background-color: rgb(0, 0, 0);
+    margin:0;
+    color: white;
 }
-
 .portada{
     height:500px;
     right:300px ;
     background-color: brown;
-    border-radius:30px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-around;
-}
+    justify-content: space-around;}
+
+
 .letra{
    display: flex;
    flex-direction:column;
-   align-items: center;
-    
+   align-items: center;}
+
+.letra h1{
+    font-size: 50px;
 }
 
+.letra div{
+color: white;}
+
+.letra button{
+    margin:20px;
+    color: rgb(255, 255, 255);
+    display: flex;
+    background-color: rgb(0, 0, 0);
+    border:none;
+    padding: 20px 30px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;}
+
+.letra button:hover{
+     background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);}
+
+.info{
+    width:2000px;
+height:160px;
+    background-color: rgb(56, 56, 56);
+}
+
+.letras{
+display:flex;
+flex-direction: column;
+margin: 0 0 0 20px;
+color: rgb(255, 255, 255);
+}
