--- a/2-base-datos-comic/style.css
+++ b/2-base-datos-comic/style.css
@@ -25,7 +25,8 @@ flex-direction: column;}
 
 .letra h1{
     font-size: 54px;
-    margin:200px 700px 50px 100px;}
+    margin:200px 700px 50px 100px;
+color: white;}
 
 .letra div{
 color: white;
@@ -51,7 +52,7 @@ align-items: flex-start;}
 .info{
     width:2000px;
 height:150px;
-    background-color: rgb(56, 56, 56);}
+    background-color:brown}
 
 .letras{
 display:flex;
@@ -59,16 +60,24 @@ flex-direction: column;
 margin: 0 0 0 20px;
 color: rgb(255, 255, 255);}
 
+@media (max-width: 768px){
+    .portada{
+       justify-content:center;
+    }
+    
+}
+
+
 
 .Episodios{
-    margin: 70px 0 0 20px;
+    margin: 100px 0 0 20px;
     color: white;}
-    
+
 .esos div{
     width:300px;
     height:200px;
     background-color:brown;
-    margin: 0 20px 0 20px;
+    margin: 0 10px 0 10px;
      border-radius: 5px;}
 
 .esos{
@@ -78,11 +87,82 @@ color: rgb(255, 255, 255);}
 .esos p{
     font-size: 14px;
     display: flex;
-    margin: 160px 0 0 10px ;
-    color: white;}
+    margin: -30px 0px 0 10px ;
+    color: rgb(255, 255, 255);}
 
-@media (min-width 768px){
-    .letra div{
-      
-    }
+.esos img{
+    width:300px;
+    height:200px;
+     border-radius: 5px;}
+
+
+
+
+.perso{
+   margin: 50px 15px 0 20px;
+    color: white;
+    display: flex;
+    justify-content: center; 
 }
+
+.personajes{
+    display: flex;
+       justify-content:center;
+}
+
+.personajes div{
+    width:100px;
+    height:100px;
+    background-color:rgb(92, 92, 92);
+    margin: 0 10px 0 10px;
+     border-radius: 5px;
+
+}
+.personajes p{
+    font-size: 14px;
+    display: flex;
+    margin: 10px 0 0 10px ;
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+.personajes img{
+    width:100px;
+    height:100px;
+    margin: 0;
+     border-radius: 5px;
+}
+
+
+@media (max-width: 783px){
+    .personajes img{
+    width:70px;
+    height:50px;
+     border-radius: 5px;
+    }
+    .personajes div{
+        width:100px;
+    height:90px;
+    }
+.personajes p{
+       margin: 10px 0 0 0 ;
+}
+
+
+.esos{
+    flex-direction: column;
+    align-items: center;
+   
+}
+.esos img{
+ margin: 20px 0 40px 0;
+}
+.esos div{
+     margin: 20px 0 40px 0;
+}
+.esos p{
+       margin: -30px 0px 0 10px ;
+}
+    }
+
+    
