--- a/2-base-datos-comic/style.css
+++ b/2-base-datos-comic/style.css
@@ -69,8 +69,8 @@ color: rgb(255, 255, 255);}
 
 
 
-.Episodios{
-    margin: 100px 0 0 20px;
+.Episodios h3{
+    margin: 100px 0 20px 20px;
     color: white;}
 
 .esos div{
