--- a/2-base-datos-comic/style.css
+++ b/2-base-datos-comic/style.css
@@ -26,7 +26,7 @@ flex-direction: column;}
 .letra h1{
     font-size: 54px;
     margin:200px 700px 50px 100px;
-color: white;}
+color: rgb(0, 0, 0);}
 
 .letra div{
 color: white;
@@ -85,7 +85,7 @@ color: rgb(255, 255, 255);}
        justify-content: space-between;}
 
 .esos p{
-    font-size: 14px;
+    font-size: 17px;
     display: flex;
     margin: -30px 0px 0 10px ;
     color: rgb(255, 255, 255);}
@@ -108,12 +108,13 @@ color: rgb(255, 255, 255);}
 .personajes{
     display: flex;
        justify-content:center;
+       
 }
 
 .personajes div{
-    width:100px;
-    height:100px;
-    background-color:rgb(92, 92, 92);
+    width:110px;
+    height:150px;
+    background-color:brown;
     margin: 0 10px 0 10px;
      border-radius: 5px;
 
@@ -121,17 +122,16 @@ color: rgb(255, 255, 255);}
 .personajes p{
     font-size: 14px;
     display: flex;
-    margin: 10px 0 0 10px ;
+    margin: 10px 10px 0 10px ;
     color: white;
     display: flex;
-    justify-content: center;
-}
+    justify-content: center;}
+
 .personajes img{
     width:100px;
     height:100px;
-    margin: 0;
-     border-radius: 5px;
-}
+    margin: 5px 5px 0 5px;
+     border-radius: 5px 5px 0 0;}
 
 
 @media (max-width: 783px){
