--- a/2-base-datos-comic/style.css
+++ b/2-base-datos-comic/style.css
@@ -1,11 +1,12 @@
 *{
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;}
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;}
+
 body{
     background-color: rgb(0, 0, 0);
-    margin:0;
-  
-}
+    margin:0;}
+
 
 .equisde{
     color: white;
@@ -82,7 +83,6 @@ color: rgb(255, 255, 255);}
     }
     
 }
-
 
 
 .Episodios h3{
