Animaciones, botones, etc

--- a/2-base-datos-comic/epi.css
+++ b/2-base-datos-comic/epi.css
@@ -1,6 +1,5 @@
 body{
-    background-color: aqua;
-    background-image: url(./img/WhatsApp\ Image\ 2025-11-25\ at\ 2.13.38\ PM.jpeg);
+     background-image: url(./img/WhatsApp\ Image\ 2025-11-25\ at\ 2.13.38\ PM.jpeg);
 }
 
 .pantalla{
@@ -10,8 +9,8 @@ background-color: brown;
 margin: 0 0 0 250px;
 }
 
-.descripcion{
-    margin: 0 280px 0 250px;
+.descri{
+     margin: 0 50px 0 50px;
     color: white;
 }
 
