--- a/2-base-datos-comic/style.css
+++ b/2-base-datos-comic/style.css
@@ -8,53 +8,137 @@ body{
     margin:0;}
 
 
-.equisde{
-    color: white;
-    font-size:20px;
-    display: flex;
-   
-}
-.equisde p{
-     margin: 35px 40px 0 10px;
-}
-.equisde h3{
-position: relative;
-top:10px;
-left:-770px;
-}
-
-.portada{
-    height:100%;
+.carrusel-container {
+    position: relative;
     width: 100%;
-    background-image: url(img/portada.png);
+    max-height: 650px;
+    overflow: hidden;
+
+     height:100%;
+    width: 100%;
     display: flex;
     align-items: flex-end;
     flex-direction: column;
     justify-content: space-around;
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
+
+.carrusel {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+.slide {
+    min-width: 100%;
+    transition: opacity 0.5s;
+}
+
+.slide img {
+    width: 100%;
+    height:650px;
+    object-fit: cover;
+     filter: brightness(60%); 
+}
+
+.btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0,0,0,0.5);
+    color: white;
+    border: none;
+    padding: 10px 12px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.prev { left: 10px; }
+.next { right: 10px; }
+
+.btn:hover {
+    background: rgba(0,0,0,0.7);
+}
 
 
+
+
+
+.equisde{
+    color: white;
+    font-size:20px;
+    display: flex;
+    background-color: none;
+    position: absolute;
+    top: 10px;
+    left: 820px;
+   
+}
+.equisde p{
+     margin: 35px 40px 0 1px;
+}
+.equisde h3{
+position: relative;
+top:10px;
+left:-760px;
+}
+
+.portada{
+    height:100%;
+    width: 100%;
+    }
+
+    
 .letra{
    display: flex;
   align-items: flex-start;
-flex-direction: column;}
+flex-direction: column;
+position: absolute;
+top: 15px;
+left: 100;
+}
 
 .letra h1{
     font-size: 54px;
     margin:200px 700px 50px 100px;
-color: rgb(0, 0, 0);}
+color: brown;}
 
 .letra div{
 color: white;
 margin:0 700px 30px 100px;
 align-items: flex-start;}
 
+.olo{
+    position: absolute;
+    top:470px;
+    left:95px;
+    color: antiquewhite;
+}
+
+
+.olo{
+text-decoration: none;
+    margin:10px 12px 70px 5px;
+    display: flex;
+    background-color: rgb(177, 27, 27);
+    border:none;
+    padding: 20px 30px ;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+.olo:hover
+{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    transform: scale(1.15);
+}
+
 .letra button{
     margin:20px;
     color: rgb(255, 255, 255);
     display: flex;
-    background-color: rgb(177, 27, 27);
+    background-color:white;
     border:none;
     padding: 20px 30px;
     cursor: pointer;
@@ -62,9 +146,6 @@ align-items: flex-start;}
     transition: background-color 0.3s;
     margin:0 700px 100px 100px;;}
 
-.letra button:hover{
-     background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);}
 
 .info{
     width:2000px;
@@ -98,7 +179,24 @@ color: rgb(255, 255, 255);}
 
 .esos{
        display: flex;
-       justify-content: space-between;}
+       justify-content: space-between;
+       overflow-x: scroll;
+       overflow-y: hidden;
+    }
+
+.esos div:hover{
+    transform: scale(1.01);
+}
+
+.esos::-webkit-scrollbar {
+    height: 10px;
+    
+}
+.esos::-webkit-scrollbar-thumb {
+    background-color:brown;
+    border-radius: 10px;
+}
+
 
 .esos p{
     font-size: 17px;
@@ -125,6 +223,12 @@ color: rgb(255, 255, 255);}
     display: flex;
        justify-content:center;
        
+}
+
+.personajes div:hover{
+     background-color:rgb(232, 62, 62);
+    color: rgb(0, 0, 0);
+    transform: scale(1.10);
 }
 
 .personajes div{
