--- a/2-base-datos-comic/inicio.css
+++ b/2-base-datos-comic/inicio.css
@@ -25,3 +25,20 @@ body{
     top: 471px;
     left:610px;
 }
+
+
+@media (max-width: 768px){
+
+    .imagen img{
+        width:300px;
+        height:300px;
+        margin: 0 0 0 210px;
+    }
+
+    .boton{
+        width:150px;
+        position: absolute;
+        top: 300px;
+        left:340px;
+    }
+}
