--- a/inicio.css
+++ b/inicio.css
@@ -9,23 +9,32 @@ body{
         color: brown;
         display: flex;
         justify-content: center;
-        margin: 100px 0 0 0;
+        margin: 250px 0 0 0;
+
+         display: flex;
+    flex-direction: column;
+    align-items: center;
     }
 
-.imagen img{
-    width:700px;
-    height:700px;
-    margin: 0 0 0 300px;
- 
-}
 
 .boton{
-    width:200px;
-    position: absolute;
-    top: 471px;
-    left:610px;
+  
+     border-radius: 4px;
+    padding: 20px 40px 20px 40px;
+    background-color: brown;
+    color: white;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+.boton:hover{
+    background-color: rgb(255, 255, 255);
+    color: brown;
+    transition: 0.3s;
+    cursor: pointer;
+}
 
 @media (max-width: 768px){
 
