--- a/2-base-datos-comic/style.css
+++ b/2-base-datos-comic/style.css
@@ -217,13 +217,6 @@ flex-direction: column;
 margin: 0 0 0 20px;
 color: rgb(255, 255, 255);}
 
-@media (max-width: 768px){
-    .portada{
-       justify-content:center;
-    }
-    
-}
-
 
 .Episodios h3{
     margin: 100px 0 20px 20px;
@@ -284,7 +277,9 @@ color: rgb(255, 255, 255);}
        
 }
 
-@media (max-width: 1079px) and (min-width: 768px){
+/*tablet responsive */
+
+@media (max-width: 1180px) and (min-width: 820px){
    .personajes{
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -373,7 +368,7 @@ color: rgb(255, 255, 255);}
     margin: 5px 5px 0 5px;
      border-radius: 5px 5px 0 0;}
 
-
+/*mobile responsive*/
 @media (max-width: 873px) and (min-width: 393px){
     .personajes img{
     width:90px;
